; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freertos/extr_croutine.c_vCoRoutineAddToDelayedList.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freertos/extr_croutine.c_vCoRoutineAddToDelayedList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@xCoRoutineTickCount = common dso_local global i64 0, align 8
@pxCurrentCoRoutine = common dso_local global %struct.TYPE_2__* null, align 8
@pxOverflowDelayedCoRoutineList = common dso_local global i64 0, align 8
@pxDelayedCoRoutineList = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vCoRoutineAddToDelayedList(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i64, i64* @xCoRoutineTickCount, align 8
  %7 = load i64, i64* %3, align 8
  %8 = add nsw i64 %6, %7
  store i64 %8, i64* %5, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pxCurrentCoRoutine, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = call i32 @uxListRemove(i32* %10)
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pxCurrentCoRoutine, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @listSET_LIST_ITEM_VALUE(i32* %13, i64 %14)
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* @xCoRoutineTickCount, align 8
  %18 = icmp slt i64 %16, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %2
  %20 = load i64, i64* @pxOverflowDelayedCoRoutineList, align 8
  %21 = inttoptr i64 %20 to i32*
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pxCurrentCoRoutine, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = call i32 @vListInsert(i32* %21, i32* %23)
  br label %31

25:                                               ; preds = %2
  %26 = load i64, i64* @pxDelayedCoRoutineList, align 8
  %27 = inttoptr i64 %26 to i32*
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pxCurrentCoRoutine, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = call i32 @vListInsert(i32* %27, i32* %29)
  br label %31

31:                                               ; preds = %25, %19
  %32 = load i32*, i32** %4, align 8
  %33 = icmp ne i32* %32, null
  br i1 %33, label %34, label %39

34:                                               ; preds = %31
  %35 = load i32*, i32** %4, align 8
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pxCurrentCoRoutine, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = call i32 @vListInsert(i32* %35, i32* %37)
  br label %39

39:                                               ; preds = %34, %31
  ret void
}

declare dso_local i32 @uxListRemove(i32*) #1

declare dso_local i32 @listSET_LIST_ITEM_VALUE(i32*, i64) #1

declare dso_local i32 @vListInsert(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
